# android-native-keyring-store

./: .gitignore  Cargo.toml  LICENSE  README.md
keyring-tester/: .gitignore  build.gradle.kts  settings.gradle.kts
keyring-tester/app/: build.gradle.kts
keyring-tester/app/src/main/: AndroidManifest.xml
keyring-tester/app/src/main/java/com/brotsky/android/testing/keyring/: MainActivity.kt
keyring-tester/app/src/main/java/io/crates/keyring/: Keyring.kt  KeyringLog.kt  KeyringTests.kt
keyring-tester/app/src/main/res/layout/: finish_tests.xml  start_tests.xml
keyring-tester/app/src/main/res/values/: strings.xml  themes.xml
keyring-tester/app/src/main/res/values-night/: themes.xml
keyring-tester/app/src/test/java/com/brotsky/android/testing/keyring/: ExampleUnitTest.kt
keyring-tester/gradle/wrapper/: gradle-wrapper.properties
src/: android_log.rs  by_service_tests.rs  by_store_tests.rs  cipher.rs  consts.rs  credential.rs  crypto.rs  error.rs  keystore.rs  lib.rs  methods.rs  shared_preferences.rs  tests.rs
src/by_service/: cred.rs  mod.rs  store.rs
src/by_store/: cred.rs  mod.rs  store.rs  vault.rs
src/tests/: crypto_tests.rs  legacy_tests.rs  mod.rs  store_tests.rs
