[package]
authors = ["André Puel <andrepuel@gmail.com>"]
description = "Android CredentialStore for keyring-core"
homepage = "https://github.com/open-source-cooperative/android-native-keyring-store"
keywords = ["password", "credential", "keychain", "android", "keystore"]
license = "MIT"
name = "android-native-keyring-store"
repository = "https://github.com/open-source-cooperative/android-native-keyring-store.git"
version = "0.4.1"
edition = "2024"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["ndk-context"]
compile_tests = ["android_log-sys"]
android-log = ["android_log-sys", "tracing-subscriber/env-filter"]

[dependencies]
android_log-sys = { version = "0.3.2", optional = true }
base64 = "0.22.1"
jni = "0.21.1"
keyring-core = "0.7"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
ndk-context = { version = "0.1.1", optional = true }
